#Setup directory paths
SET(ROOT ${CMAKE_CURRENT_SOURCE_DIR})
SET(HEADERS ${ROOT}/headers)
SET(SOURCES ${ROOT}/sources)

ADD_DEFINITIONS(-DX12ABUILD="${X12A_EXECUTABLE_BUILD}")
ADD_DEFINITIONS(-DX12AINSTALL="${X12A_EXECUTABLE_INSTALL}")

#Initiate source files
FILE(GLOB VI_GRETL_SOURCES ${SOURCES}/*.cpp)
FILE(GLOB VI_GRETL_HEADERS ${HEADERS}/*.h)

#Create library
INCLUDE_DIRECTORIES(${GRETL_INCLUDE_DIR})
ADD_LIBRARY(vigretl SHARED ${VI_GRETL_HEADERS} ${VI_GRETL_SOURCES})
QT5_USE_MODULES(vigretl Core Multimedia)
TARGET_LINK_LIBRARIES(vigretl viessentials ${GRETL_LIBRARY} ${GRETL_ARMA_LIBRARY} ${GRETL_GARCH_LIBRARY})

#Install file
INSTALL(TARGETS vigretl DESTINATION engine)
