#Setup directory paths
SET(ROOT ${CMAKE_CURRENT_SOURCE_DIR})
SET(HEADERS ${ROOT}/headers)
SET(SOURCES ${ROOT}/sources)

#Include common headers
INCLUDE_DIRECTORIES(${HEADERS})

#Initiate source files
FILE(GLOB VI_MATCHER_SOURCES ${SOURCES}/*.cpp)
FILE(GLOB VI_MATCHER_HEADERS_ALL ${HEADERS}/*.h)
SET(VI_MATCHER_HEADERS)
SET(VI_MATCHER_MOC_HEADERS)
FOREACH(HEADER ${VI_MATCHER_HEADERS_ALL})
    FILE(STRINGS "${HEADER}" lines REGEX "Q_OBJECT")
    IF(lines)
        LIST(APPEND VI_MATCHER_MOC_HEADERS "${HEADER}")
	ELSE()
		LIST(APPEND VI_MATCHER_HEADERS "${HEADER}")
    ENDIF()
ENDFOREACH()

#Wrap Qt files
QT5_WRAP_CPP(VI_WRAPPER_HEADERS ${VI_MATCHER_MOC_HEADERS})

#Create library
ADD_LIBRARY(vimatcher SHARED ${VI_MATCHER_HEADERS} ${VI_MATCHER_SOURCES} ${VI_WRAPPER_HEADERS})
TARGET_LINK_LIBRARIES(vimatcher ${QT_QTCORE_LIBRARIES} viaudiobuffer vifouriertransformer)

#Install file
INSTALL(TARGETS vimatcher DESTINATION engine)
